--- a/app/globals.css
+++ b/app/globals.css
@@ -59,6 +59,16 @@ body {
   min-width: 260%;
 }
 
+/* .roboto-<uniquifier> {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+ */
+
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
